Created DTOs according to swagger docs
